# sdlc-playground

./: .gitignore  CLAUDE.md  README.md  hello.sh  test_hello.sh
.claude/commands/: sdlc-constitution.md  sdlc-decompose.md  sdlc-define.md  sdlc-status.md  sdlc-submit.md
.claude/skills/database-and-schema/: SKILL.md
.claude/skills/doubt-driven-development/: SKILL.md
.claude/skills/env-and-config/: SKILL.md
.claude/skills/estimation/: SKILL.md
.claude/skills/idea-refine/: SKILL.md
.claude/skills/interview-me/: SKILL.md
.claude/skills/system-architecture/: SKILL.md
.claude/skills/technical-debt/: SKILL.md
.github/workflows/: ci.yml
.sdlc-factory/: config.yml  constitution.md
.sdlc-factory/agents/: dev.md  reviewer.md
.sdlc-factory/docs/: branch-protection.md
.sdlc-factory/prompts/: artifacts.md  decomposer.md
apps/dish-search-api/: .gitignore  README.md  pyproject.toml
apps/dish-search-api/data/: seed.json
apps/dish-search-api/src/dish_search/: __init__.py  catalog.py  main.py  models.py  search.py
apps/dish-search-api/tests/: test_api.py  test_catalog.py  test_search_service.py  test_smoke.py
apps/restaurant-onboarding/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/restaurant-onboarding/src/main/resources/: application.yml
artifacts/dish-search-api/: spec.md  tasks.md  tech-spec.md
artifacts/restaurant-onboarding/: spec.md  tasks.md  tech-spec.md
sdlc-generated-code/: README.md  build.gradle.kts  settings.gradle.kts
sdlc-generated-code/src/main/resources/: application.yml
(+62 files in other folders)
